--- a/2017.md
+++ b/2017.md
@@ -282,6 +282,8 @@
  - [ellisonleao](https://github.com/ellisonleao)
  - [jackiemacharia](https://github.com/jackiemacharia)
  - [xEpozZ](https://github.com/xepozz)
+ - [Harman](https://github.com/HarmanBhutani)
+ 
  - [CorneliusIV](https://github.com/CorneliusIV)
  - [okrasn](https://github.com/okrasn)
  - [arijitAD](https://github.com/arijitAD)
